syntax = "proto3";

package store;

import "google/protobuf/empty.proto";

service Store {
  rpc Put(PutRequest) returns (google.protobuf.Empty) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc GetLinks(GetLinksRequest) returns(GetLinksResponse) {}
}

message PutRequest {
  // Serialized CID of the given block.
  bytes cid = 1;
  // bytes of data
  bytes blob = 2;
  // list of CIDs
  repeated bytes links = 3;
}

message GetRequest {
  // Serialized CID of the requested block.
  bytes cid = 1;
}

message GetResponse {
  // bytes of data
  optional bytes data = 1;
}

message GetLinksRequest {
  // Serialized root CID of the requested links.
  bytes cid = 1;
}

message GetLinksResponse {
  // list of CIDs
  repeated bytes links = 1;
}

